# influencer-management

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  enums.py  main.py
backend/app/api/: errors.py  openapi_export.py  schemas.py
backend/app/brands/: schemas.py
backend/app/campaigns/: schemas.py
backend/app/compensation/: schemas.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/deals/: schemas.py
backend/app/deliverables/: schemas.py
backend/app/dev/: __init__.py  seed_mock_data.py
backend/app/domain/: __init__.py  enums.py
backend/app/email_context/: schemas.py
backend/app/exports/: schemas.py
backend/app/files/: schemas.py
backend/app/influencers/: schemas.py
backend/app/jobs/: schemas.py
backend/app/outreach/: schemas.py
backend/app/repositories/: __init__.py  interfaces.py  sqlalchemy.py
backend/app/schemas/: campaign_attachments.py  campaign_exports.py  campaigns.py  deal_attachments.py  deals.py  deliverables.py  influencers.py  (+4 more)
backend/dev/: README.md  mock-modash-dedup-import.csv  mock_data.sql
backend/tests/: conftest.py  modash-export.csv  test_api_contract.py  test_brands.py  test_campaign_exports.py  test_campaigns.py  test_compensation_items.py  test_data_model.py  test_deals.py  test_deliverables.py  test_email_context.py  test_exports.py  test_health.py  test_influencer_ingestion.py  test_influencers.py  test_jobs_files.py  test_mock_seed_data.py  test_outreach.py
(+116 files in other folders)
