[project]
name = "creatorflow-backend"
version = "0.1.0"
description = "Backend for the CreatorFlow local-first influencer relationship manager."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-auth-httplib2>=0.4.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "rq>=1.16.2",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP046"]
